# CLocoMani_Humanoid

./: .gitignore  .gitmodules  LICENCE.txt  Make.sh  Makefile  README.md
docker/: Dockerfile  docker-compose.yml  docker-compose.yml.example
humanoid_wbDynPlan/LocoMani_wbDynPlan/: CMakeLists.txt  package.xml
humanoid_wbDynPlan/LocoMani_wbDynPlan/include/: LocoManiMpcInterface.h
humanoid_wbDynPlan/LocoMani_wbDynPlan/src/: LocoManiMpcInterface.cpp
humanoid_wbDynPlan/LocoMani_wbDynPlan_ros2/: CMakeLists.txt  package.xml  setup.py
humanoid_wbDynPlan/LocoMani_wbDynPlan_ros2/src/: CentroidalMpcDummySimNode.cpp  CentroidalMpcKeyboardPoseCommandNode.cpp  LocoManiMpcRobotSim.cpp  LocoManiMpcSqpNode.cpp
humanoid_wbDynPlan/remote_control/: package.xml  setup.py
humanoid_wbDynPlan/remote_control/remote_control/: base_velocity_controller_gui.py  (+3 more)
humanoid_wbDynPlan/wbDynPlan/: CMakeLists.txt  package.xml
humanoid_wbDynPlan/wbDynPlan_msgs/: package.xml
humanoid_wbDynPlan/wbDynPlan_pyutils/: package.xml  setup.cfg  setup.py
humanoid_wbDynPlan/wbDynPlan_pyutils/humanoid_common_mpc_pyutils/: mpc_observation_inspector.py  mpc_observation_logger.py
humanoid_wbDynPlan/wbDynPlan_pyutils/launch/: mpc_observation_logger.launch.py
humanoid_wbDynPlan/wbDynPlan_pyutils/test/: test_xbox_controller.py
humanoid_wbDynPlan/wbDynPlan_ros2/: CMakeLists.txt  package.xml  setup.py
lib/mujoco_vendor/: package.xml
robot_runtime/mujoco_sim_interface/: package.xml
robot_runtime/robot_core/: package.xml
robot_runtime/robot_model/: package.xml
test/: eigen_demo.cpp
(+157 files in other folders)
